// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsTab should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Permissions
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="app-edit-scopes-select"
              label="Permissions"
              name="scopes"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
        </div>
      </div>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Reapit Products
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="app-edit-products-select"
              label="Reapit Products"
              name="products"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_NAME
              </label>
            </div>
          </div>
        </div>
      </div>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Private App
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-private-app"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ee8eqmp-el-input-wrap-med"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              disabled=""
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Permissions
        </label>
        <div
          class="eooz7jy-el-multi-select-input-wrapper"
        >
          <input
            class="eg4njbl-el-multi-select-input"
            id="app-edit-scopes-select"
            label="Permissions"
            name="scopes"
          />
          <div
            class="e12c6sou-el-multi-select-selected"
          >
            <span
              class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <p>
              Please select from the options below
            </p>
          </div>
          <div
            class="ef7odf0-el-multi-select-un-selected"
          >
            <input
              class="e1wdkc9j-el-multi-select-checkbox"
              id="test-static-id"
              type="checkbox"
            />
            <label
              class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
              for="test-static-id"
            >
              MOCK_DESCRIPTION
            </label>
          </div>
        </div>
      </div>
    </div>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Reapit Products
        </label>
        <div
          class="eooz7jy-el-multi-select-input-wrapper"
        >
          <input
            class="eg4njbl-el-multi-select-input"
            id="app-edit-products-select"
            label="Reapit Products"
            name="products"
          />
          <div
            class="e12c6sou-el-multi-select-selected"
          >
            <span
              class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <p>
              Please select from the options below
            </p>
          </div>
          <div
            class="ef7odf0-el-multi-select-un-selected"
          >
            <input
              class="e1wdkc9j-el-multi-select-checkbox"
              id="test-static-id"
              type="checkbox"
            />
            <label
              class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
              for="test-static-id"
            >
              MOCK_NAME
            </label>
          </div>
        </div>
      </div>
    </div>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Private App
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-private-app"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ee8eqmp-el-input-wrap-med"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            disabled=""
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PermissionsTab should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </p>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Private App
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-private-app"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ee8eqmp-el-input-wrap-med"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              disabled=""
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </p>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Private App
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-private-app"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ee8eqmp-el-input-wrap-med"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            disabled=""
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
